--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -26,8 +26,8 @@
     <property name="title" translatable="yes">Preferences</property>
     <property name="modal">True</property>
     <property name="window-position">center-on-parent</property>
-    <property name="default-width">320</property>
-    <property name="default-height">260</property>
+    <property name="default-width">480</property>
+    <property name="default-height">340</property>
     <property name="type-hint">dialog</property>
     <signal name="destroy" handler="on_dialog_destroy" swapped="no"/>
     <child internal-child="vbox">
@@ -136,6 +136,7 @@
                     <property name="can-focus">False</property>
                     <child>
                       <object class="GtkStack" id="prefs_stack">
+                        <property name="width-request">297</property>
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <property name="hhomogeneous">False</property>
