Add menu item to undownload downloaded episodes.
This performs a delete followed by marking the episode as its previous
played/unplayed state (undeleting it), in a single action, without
needing to change the view filter to show deleted episodes.

--- a/share/gpodder/ui/gtk/menus.ui
+++ b/share/gpodder/ui/gtk/menus.ui
@@ -125,6 +125,10 @@
           <attribute name="label" translatable="yes">Cancel</attribute>
         </item>
         <item>
+          <attribute name="action">win.undownload</attribute>
+          <attribute name="label" translatable="yes">Undownload</attribute>
+        </item>
+        <item>
           <attribute name="action">win.delete</attribute>
           <attribute name="label" translatable="yes">Delete</attribute>
         </item>
